--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Slide 1 -->
     <div class="row" id="slide1" style="display: none">
       <div class="col-lg-8">
-        <img src="images/desktop-image-hero-1.jpg" alt="Slide 1 Image">
+        <img src="images/desktop-image-hero-1.jpg" alt="Slide 1 Image" style="width: 100%;">
       </div>
       <div class="col-lg-4">
         <h2>Discover innovative ways to decorate</h2>
@@ -50,7 +50,7 @@
     <!-- Slide 2 (Hidden) -->
     <div class="row" id="slide2" style="display: none">
       <div class="col-lg-8">
-        <img src="images/desktop-image-hero-2.jpg" alt="Slide 2 Image">
+        <img src="images/desktop-image-hero-2.jpg" alt="Slide 2 Image" style="width: 100%;">
       </div>
       <div class="col-lg-4">
         <h2>We are available all across the globe</h2>
@@ -62,7 +62,7 @@
     <!-- Slide 3 (Hidden) -->
     <div class="row" id="slide3" style="display: none">
       <div class="col-lg-8">
-        <img src="images/desktop-image-hero-3.jpg" alt="Slide 3 Image">
+        <img src="images/desktop-image-hero-3.jpg" alt="Slide 3 Image" style="width: 100%;">
       </div>
       <div class="col-lg-4">
         <h2>Manufactured with the best materials</h2>
@@ -81,22 +81,18 @@
 
     <!-- Three-column layout -->
     <div class="row">
-      <div class="col-lg-4">
-        <img src="images/image-about-dark.jpg" alt="About Dark Image">
+      <div class="col-md-3">
+        <img src="images/image-about-dark.jpg" alt="About Dark Image" style="width: 100%;">
       </div>
-      <div class="col-lg-4">
+      <div class="col-md-6">
         <h2>About our furniture</h2>
         <p>Our multifunctional collection blends design and function to suit your individual taste. Make each room unique, or pick a cohesive theme that best expresses your interests and what inspires you. Find the furniture pieces you need, from traditional to contemporary styles or anything in between. Product specialists are available to help you create your dream space.</p>
       </div>
-      <div class="col-lg-4">
-        <img src="images/image-about-light.jpg" alt="About Light Image">
+      <div class="col-md-3">
+        <img src="images/image-about-light.jpg" alt="About Light Image" style="width: 100%;">
       </div>
     </div>
   </div>
-
-  
-  
-</div>
 
 <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
